added inline , internal add external css

--- a/learncss.html
+++ b/learncss.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Learn CSS</title>
+        <style>{}
+        </style>
     </head>
     <body>
-        <h1>Lgit </h1>
+        <h1 style="color:red; text-align: center;">Learn CSS is really fun! </h1>
     </body>
 </html>
