--- a/learncss.html
+++ b/learncss.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link real="stylesheet" href="style.css" />
         <title>Learn CSS</title>
-        <style>{}
+        <!--This is internal CSS-->
+        <style>
+        body{
+             background-color: yellow;
+        }
         </style>
     </head>
     <body>
+        <!-- This is inline CSS-->
         <h1 style="color:red; text-align: center;">Learn CSS is really fun! </h1>
+        <p>My name is William Hutapea </p>    
     </body>
 </html>
