added  the a styles

--- a/learncss4.html
+++ b/learncss4.html
@@ -2,8 +2,30 @@
 <html>
     <head>
         <title>Learn CSS part 4</title>
+        <style>
+            a{
+                color: pink;
+                text-decoration: none;
+                border: 1px solid pink;
+                padding: 5px;
+            }
+            a:link{
+                color:green;
+            }
+            a:visited{
+                color:red;
+            }
+            a:hover{
+                color:hotpink;
+            }
+            a:active{
+                color:deeppink
+            }
+        </style>
     </head>
     <body>
         <h1>Learn CSS part 4</h1>
+
+        <a href="https://google.com">Link to google</a>
     </body>
 </html>
