modified the style to pink rounded border looks like a button

--- a/learncss4.html
+++ b/learncss4.html
@@ -6,8 +6,12 @@
             a{
                 color: pink;
                 text-decoration: none;
+                border: 1px solid deeppink;
                 border: 1px solid pink;
+                background-color: hotpink;
                 padding: 5px;
+                font-size: Arial, Helvetica, sans-serif;
+                border-radius: 10px;
             }
             a:link{
                 color:green;
@@ -16,6 +20,7 @@
                 color:red;
             }
             a:hover{
+                background-color:palegreen;
                 color:hotpink;
             }
             a:active{
