index lear to make css

--- a/learncss5.html
+++ b/learncss5.html
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <td>1.</td>
-                <td>Yefta</td>
+                <td>Anto</td>
                 <td>Present</td>
             </tr>
             <tr>
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td>3.</td>
-                <td>Agus</td>
+                <td>Cecep</td>
                 <td>Present</td>
             </tr>
         </table>
